--- a/page5.html
+++ b/page5.html
@@ -274,7 +274,7 @@ nav ul li a:hover {
           <span></span>
         </div>
       <ul id="menu">
-        <li><a href="#">HOME</a></li>
+        <li><a href="./index.html">HOME</a></li>
         <li><a href="./page1.html" onclick="showSpinner()">F&T CORNER</a></li>
         <li><a href="./page2.html" onclick="showSpinner()">ABOUT</a></li>
         <li><a href="./page3.html" onclick="showSpinner()">ECOCHOCO</a></li>
